--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
   <div class="about">
     
   
-    <div class="avatar"><img src="/images/pp3.png" alt="avatar"></div>
+    <div class="avatar"><img src="/images/pp3.webp" alt="avatar"></div>
   
 
 
