remove old links

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -14,7 +14,7 @@
 
 <meta name="description" content="You can view or download my latest CV below:
 📄 View Resume (PDF)">
-<meta name="keywords" content="blog,developer,personal">
+<meta name="keywords" content="developer,personal,linux">
 
 
 
